   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2013-06-11 15:14 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r233)
  * hbqt/qtgui/hbqt_hbqvalidator.cpp
    % Minor: added debug trace.

  * hbqtwidgets/alert.prg
    % Minor: removed unused lines.

  * hbqtwidgets/getsys.prg
    % Restructured: some internals to have greater control over numeric GETS.

  * hbqtwidgets/hbqtbrowse.prg
    ! Fixed: to take use of current changes in numeric GETs handelling.

  * hbqtwidgets/tests/validator.prg
    % Changed: code to demonstrate numeric GET - "Val2".

  ; NOTE: these changes facilitate beeter experience with numeric GETs.
          I have better control to implement missing PICTURE functionality.
          Please test extensively with all PICTUREs used by you in your 
          application and report where does it faulters.

2013-06-07 12:33 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r232)
  * hbqt/qtgui/hbqtgui.ch
    + Added: constants QColorDialog_* and QFontDialog_*.

  * hbqt/qtgui/qth/QWindow.qth
    ! Changed: :fromWinId() version info. It is 0x050100 instead of 0x051000.

2013-06-06 13:16 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r231)
  * hbqt/qtgui/qth/QSurfaceFormat.qth
  * hbqt/qtgui/qth/QWindow.qth
    ! Guarded: some methods per Qt sub-versions.

2013-06-05 22:52 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r230)
  * hbqt/qtcore/qth/QEasingCurve.qth
  * hbqt/qtcore/qth/QVariantAnimation.qth
    ! Fixed: some properties were added in Qt 5.x.

2013-06-05 14:32 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r229)
  * hbqt/qtcore/qth/filelist.hbm
  + hbqt/qtcore/qth/QAbstractAnimation.qth
  + hbqt/qtcore/qth/QAnimationGroup.qth